@@ -1,3 +1,8 @@
+Sat Jun  5 13:10:47 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/matrix.rb (eql?, ==, minor): Fix bugs when comparing/returning
+	  some empty matrices.
+
 Sat Jun  5 11:00:48 2010  Tanaka Akira  <akr@fsij.org>
 
 	* error.c (rb_name_err_mesg_new): guard mesg, recv and method.
